# ProtoFuiDB

./: .gitignore  README.md  main.py  manage.py  pyproject.toml  pytest.ini
Databases/: crypto.py  forms.py  io.py  models.py  tests.py  urls.py  utils.py  views.py
Databases/migrations/: 0001_initial.py  0002_alter_database_provider.py  0003_delete_provider_database_file_alter_database_host_and_more.py  0004_database_db_name.py  0005_database_owner.py  0006_alter_database_owner.py  0007_database_status.py
Databases/templatetags/: db_filters.py
FuiDB/: asgi.py  settings.py  urls.py  wsgi.py
core/: context_processors.py  tests.py  urls.py  views.py
templates/: base.html  base_dashboard.html  navbar.html  sidebar.html
templates/Databases/: dashboard_index.html  database_create.html  database_detail.html
templates/Databases/partials/: cell_edit.html  file_field.html  provider_fields.html  query_panel.html  query_results.html  query_results_table.html  sidebar_table_list.html  toast_messages.html
templates/core/: change_username.html  dashboard.html  register_superuser.html  user_detail.html  user_menu.html
templates/registration/: login.html  password_change_done.html  password_change_form.html
tests/: test_main.py
theme/static_src/src/: styles.css
