[project]
name = "fuidb"
version = "0.1.0"
description = "Flexible Databases Management"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncio>=4.0.0",
    "django>=6.0.6",
    "django-dotenv>=1.4.2",
    "django-htmx>=1.27.0",
    "granian>=2.7.6",
    "mariadb>=1.1.14",
    "mysqlclient>=2.2.8",
    "psycopg2>=2.9.12",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]
