[project]
name = "fuidb"
version = "0.1.0"
description = "Flexible Databases Management"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncio>=4.0.0",
    "cookiecutter>=2.7.1",
    "django>=6.0.6",
    "django-htmx>=1.27.0",
    "django-tailwind>=4.1.0",
    "granian>=2.7.6",
    "mariadb>=1.1.14",
    "mysqlclient>=2.2.8",
    #"psycopg2>=2.9.12",
    "psycopg2-binary==2.9.12",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "python-dotenv>=1.2.2",
    "questionary>=2.1.1",
    "sqlglot>=25.0.0",
    "cryptography>=42.0.0",
]
